Quarto report dependencies embedded in the html file and update in help

--- a/prolipipe/report.qmd
+++ b/prolipipe/report.qmd
@@ -3,6 +3,7 @@ title: Prolipipe report
 format: 
     html:
         page-layout: full
+        embed-resources: true
 execute: 
   cache: false
 jupyter: python3
